--- a/templates/index.html
+++ b/templates/index.html
@@ -27,13 +27,13 @@
     
     <p>Number of column containing...</p>
     <form class="container" id="columnForm">
-        <p>Last name</p> <input type="number" class="columnnumbers" placeholder="1">
-        <p>First name</p> <input type="number" class="columnnumbers" placeholder="2">
-        <p>Name of project</p> <input type="number" class="columnnumbers" placeholder="3">
-        <p>Project topic</p> <input type="number" class="columnnumbers" placeholder="4">
-        <p>Availability</p> <input type="number" class="columnnumbers" placeholder="5">
-        <p>Presenting with friend(s)</p> <input type="number" class="columnnumbers" placeholder="6">
-        <p>Blurb about project</p> <input type="number" class="columnnumbers" placeholder="7">
+        <p>Last name</p> <input type="number" id="lastName" class="columnnumbers" placeholder="1">
+        <p>First name</p> <input type="number" id="firstName" class="columnnumbers" placeholder="2">
+        <p>Name of project</p> <input type="number" id="projectName" class="columnnumbers" placeholder="3">
+        <p>Project topic</p> <input type="number" id="projectTopic" class="columnnumbers" placeholder="4">
+        <p>Availability</p> <input type="number" id="availability" class="columnnumbers" placeholder="5">
+        <p>Presenting with friend(s)</p> <input type="number" id="friends" class="columnnumbers" placeholder="6">
+        <p>Blurb about project</p> <input type="number" id="blurb" class="columnnumbers" placeholder="7">
     </form>
 
     <h2>Rooms</h2>
