--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@
                 friendsCol: friendsCol,
                 blurbCol: blurbCol,
                 allTimes: allTimes,
-                roomToTimes: roomToTimes
+                roomsToTimes: roomsToTimes
             };
             
             // Send the data to the backend
