--- a/templates/index.html
+++ b/templates/index.html
@@ -164,7 +164,7 @@
                 headers: {
                     'Content-Type': 'application/json'
                 },
-                body: JSON.stringify({data: data})
+                body: JSON.stringify(data)
             })
             .then(response => {
                 console.log("✅ Received response from backend!");
