--- a/templates/hola.html
+++ b/templates/hola.html
@@ -120,7 +120,7 @@
     const topicColorMap = {};
     let colorIndex = 0;
 
-    function createRoomElements() {
+    function createRoomElements(initRoomDistribution) {
       const labelContainer = document.getElementById("room-labels");
       labelContainer.innerHTML = "";
       const roomContainer = document.getElementById("rooms-container");
