--- a/templates/hola.html
+++ b/templates/hola.html
@@ -73,7 +73,7 @@
     .item {
       border: 1px solid #555;
       padding: 5px;
-      margin: 5px 0;
+      margin: 10px 0;
       cursor: move;
     }
   </style>
@@ -114,8 +114,27 @@
     .catch(err => console.error("Failed to fetch room data:", err));
 
     const topicColors = [
-      "#ff9999", "#99ccff", "#99ff99", "#ffcc99", "#cc99ff",
-      "#ffff99", "#66ffcc", "#ffb3e6", "#c2f0c2", "#d9b3ff"
+      "#FF5733", // Bright Red-Orange
+      "#33B5FF", // Bright Sky Blue
+      "#75FF33", // Vivid Lime Green
+      "#FF33F6", // Hot Pink
+      "#FFD133", // Golden Yellow
+      "#8E44AD", // Deep Purple
+      "#FF7F50", // Coral
+      "#40E0D0", // Turquoise
+      "#DFFF00", // Chartreuse
+      "#FF1493", // Deep Pink
+    
+      "#6495ED", // Cornflower Blue
+      "#20B2AA", // Light Sea Green
+      "#FF8C00", // Dark Orange
+      "#ADFF2F", // Green Yellow
+      "#DA70D6", // Orchid
+      "#CD5C5C", // Indian Red
+      "#00CED1", // Dark Turquoise
+      "#B0E0E6", // Powder Blue
+      "#FF4500", // Orange Red
+      "#9ACD32"  // Yellow Green
     ];
     const topicColorMap = {};
     let colorIndex = 0;
