--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <h2>Google Spreadsheet Info</h2>
-    <input id="spreadsheetUrl" type="text" name="url" style="width:1000px;" placeholder="Paste spreadsheet csv here...">
+    <input id="spreadsheetUrl" type="text" name="url" style="width:1000px;" placeholder="Paste spreadsheet csv here..." value="https://docs.google.com/spreadsheets/d/e/2PACX-1vSUTvl8O4D9cuNTR1MBYAu8CgRzM_sI6eK29hoPriy-4edUpz7YUSDL80wLqxBszu0RLV2YYMLgL3pK/pub?output=csv">
     
     <p>Number of column containing...</p>
     <form class="container" id="columnForm">
@@ -38,12 +38,23 @@
 
     <h2>Rooms</h2>
     <p>Enter the name of each room on a separate line</p>
-    <textarea id="roomsInput" style="width:200px" rows="5"></textarea>
+    <textarea id="roomsInput" style="width:200px" rows="5">Room 195
+Room 198
+Room 199</textarea>
 
     <h2>All possible times</h2>
     <p>Enter these <i>exactly as they are written</i> as options for the availability question in the Google Form, each time on a separate line</p>
     <p>Once you press submit you will be able to select which rooms are available at each time.</p>
-    <textarea id="timesInput" style="width:400px" rows="15"></textarea>
+    <textarea id="timesInput" style="width:400px" rows="15">PD 2 Tuesday, December 19th
+PD 3, Tuesday, December 19th
+PD 4, Tuesday, December 19th
+PD 5, Tuesday, December 19th
+PD 6, Tuesday, December 19th
+PD 2, Thursday, December 21st
+PD 3, Thursday, December 21st
+PD 4, Thursday, December 21st
+PD 5, Thursday, December 21st
+PD 6, Thursday, December 21st</textarea>
 
     <br><br>
     <button onclick="generateTable()">Submit</button>
