--- a/templates/hola.html
+++ b/templates/hola.html
@@ -49,7 +49,7 @@
       width: 300px;
       min-height: 400px;
       border: 2px solid #333;
-      padding: 10px 10px 60px 10px; /* extra bottom padding */
+      padding: 10px 10px 20px 10px; /* extra bottom padding */
       background-color: #f9f9f9;
       display: flex;
       flex-direction: column;
@@ -60,7 +60,7 @@
 
     .topic-box {
       border: 2px solid #4caf50;
-      padding: 10px 10px 40px 10px;
+      padding: 10px 10px 20px 10px;
       min-height: 100px;
       cursor: move;
     }
@@ -108,7 +108,7 @@
     fetch('/get_data')
     .then(res => res.json())
     .then(data => {
-      createRoomElements(data.realInitRoomDistribution);
+      createRoomElements(data.initRoomDistribution);
       // You can store or log `data.backupRoomDict` if needed
     })
     .catch(err => console.error("Failed to fetch room data:", err));
@@ -238,7 +238,7 @@
     }
 
     // Initialize page
-    /*createRoomElements();*/
+    //createRoomElements(initRoomDistribution);
   </script>
 </body>
 </html>
