--- a/templates/hola.html
+++ b/templates/hola.html
@@ -87,6 +87,8 @@
     <!-- Rooms will be populated here from JS -->
   </div>
 
+  <button id="generate" style="display: none;" onclick="generateSchedules()">Generate schedules</button>
+  
   <script>
     /*const initRoomDistribution = {
       "Room Alpha": [
@@ -239,6 +241,10 @@
 
     // Initialize page
     //createRoomElements(initRoomDistribution);
+
+
+    function generateSchedules() {
+    }
   </script>
 </body>
 </html>
